--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,12 @@ authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.8"
+fire = "^0.4"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b"
-flake8 = "^3.8"
-ipython = "^7.16"
-pytest = "^6.0"
+black = "^22.3"
+ipython = "^8.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
